--- a/03_WebDev1/04_MidTermProject/index.html
+++ b/03_WebDev1/04_MidTermProject/index.html
@@ -189,7 +189,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" id="order-btn" class="btn btn-primary">Order now</button>
+                        <button type="button" class="btn btn-primary">Order now</button>
                     </div>
                 </div>
             </div>
